# sankeygen

./: README.md  demo.csv  pyproject.toml  sankeygen.py
.github/workflows/: publish-to-pypi.yml
src/hibiscus_sankey/: cli.py
